<?php die(); ?>
Akeeba Panopticon 1.0.4
================================================================================
+ Site reports (updates, backups, file scanner, Admin Tools actions) [gh-220]
+ Support for custom templates [gh-249]
+ Send test email [gh-267]
+ Major performance improvement for scheduled tasks
+ Extension list search box [gh-247]
# [MEDIUM] Repeated notifications for updates if more than one extension with updates is found [gh-258]
# [MEDIUM] Cannot access My Profile page [gh-241]
# [MEDIUM] PHP error in the Extensions Updates page if you have extensions with missing Download Keys [gh-240]
# [HIGH] Post-update code does not apply database changes [gh-283]

Akeeba Panopticon 1.0.3
================================================================================
+ .env support [gh-34]
+ Anonymous usage statistics collection [gh-215]
+ Link to self-update page even without any updates found [gh-209]
+ Periodic database backup [gh-223]
# [HIGH] Regression: can't access Setup
# [HIGH] Old MariaDB versions don't support JSONPath [gh-201]
# [HIGH] Very low self-update timeout (5 seconds) [gh-185]
# [HIGH] Too tight permissions check
# [MEDIUM] Users with only Add Own and Edit Own privileges cannot add sites [gh-203]
# [LOW] Some mail templates may be missing due to typo [gh-226]
# [LOW] SCSS files were excluded [gh-233]

Akeeba Panopticon 1.0.2
================================================================================
! Security [critical]: non-super users can change or remove other users, including super users
+ TOTP Multi-factor Authentication (gh-168)
+ Extensions Update Overview page (gh-178)
+ Core Updates Overview page (gh-178)
+ Automated task to check for self-updates (gh-174)
+ Take a backup before updating Joomla! (gh-16)
~ Improve behavior clicking Edit without selecting a site
~ Improve the MFA method selection layout
~ Caching tweaks
# [LOW] Missing email template type for failed Joomla! update