@@ -139,6 +139,10 @@ PANOPTICON_FONTSIZE=
 # Life, out of date) in the main page of the application?
 PANOPTICON_PHPWARNINGS=true
 
+# Enable user avatars
+# Should I display Gravatar avatars? Disabled by default and unavailable in the user interface because people are dumb.
+PANOPTICON_AVATARS=false
+
 ## =============================================================================
 ## Automation
 ## =============================================================================
