@@ -6,6 +6,7 @@ Akeeba Panopticon 1.0.4
 + Send test email [gh-267]
 + Major performance improvement for scheduled tasks
 + Extension list search box [gh-247]
+- Removed avatars
 # [MEDIUM] Repeated notifications for updates if more than one extension with updates is found [gh-258]
 # [MEDIUM] Cannot access My Profile page [gh-241]
 # [MEDIUM] PHP error in the Extensions Updates page if you have extensions with missing Download Keys [gh-240]
